<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/adaptercustomizado"
    android:paddingLeft="16dp"
    android:paddingTop="32dp"
    android:paddingRight="16dp"
    android:paddingBottom="32dp"
    tools:context=".Fragments.infoHqFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fundobancoborderblue">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/informar"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.44"
            app:layout_constraintStart_toEndOf="@+id/buttonBack"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="34dp"
            android:layout_height="55dp"
            android:background="@android:color/transparent"
            android:drawableRight="@drawable/ic_arrow_back_black_24dp"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="@+id/toolbar"
            app:layout_constraintTop_toTopOf="@+id/toolbar"
            android:drawableEnd="@drawable/ic_arrow_back_black_24dp" />


        <TextView
            android:id="@+id/textViewNomeInfo"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@android:color/background_light"
            android:gravity="center"
            android:padding="4dp"
            android:shadowColor="@android:color/background_dark"
            android:text="@string/textnome"
            android:textColor="@android:color/background_dark"
            android:textColorHighlight="@android:color/background_dark"
            android:textColorHint="@android:color/background_dark"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/textView_atual"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@android:color/background_light"
            android:gravity="center"
            android:padding="4dp"
            android:shadowColor="@android:color/background_dark"
            android:text="@string/capitulo_atual"
            android:textColor="@android:color/background_dark"
            android:textColorHighlight="@android:color/background_dark"
            android:textColorHint="@android:color/background_dark"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNomeInfo" />


        <TextView
            android:id="@+id/textViewAtualInfo"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@android:color/background_light"
            android:gravity="center"
            android:padding="4dp"
            android:shadowColor="@android:color/background_dark"
            android:text="@string/textatual"
            android:textColor="@android:color/background_dark"
            android:textColorHighlight="@android:color/background_dark"
            android:textColorHint="@android:color/background_dark"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_atual" />

        <TextView
            android:id="@+id/textView_Total"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@android:color/background_light"
            android:gravity="center"
            android:padding="4dp"
            android:shadowColor="@android:color/background_dark"
            android:text="@string/capitulo_total"
            android:textColor="@android:color/background_dark"
            android:textColorHighlight="@android:color/background_dark"
            android:textColorHint="@android:color/background_dark"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewAtualInfo" />

        <TextView
            android:id="@+id/textViewTotalInfo"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@android:color/background_light"
            android:gravity="center"
            android:padding="4dp"
            android:shadowColor="@android:color/background_dark"
            android:text="@string/texttotal"
            android:textColor="@android:color/background_dark"
            android:textColorHighlight="@android:color/background_dark"
            android:textColorHint="@android:color/background_dark"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_Total" />

        <TextView
            android:id="@+id/textView_Site"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@android:color/background_light"
            android:gravity="center"
            android:padding="4dp"
            android:shadowColor="@android:color/background_dark"
            android:text="@string/site"
            android:textColor="@android:color/background_dark"
            android:textColorHighlight="@android:color/background_dark"
            android:textColorHint="@android:color/background_dark"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTotalInfo" />

        <TextView
            android:id="@+id/textViewSiteInfo"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@android:color/background_light"
            android:gravity="center"
            android:padding="4dp"
            android:shadowColor="@color/novaCor"
            android:text="@string/textsite"
            android:textColor="@color/novaCor"
            android:textColorHighlight="@android:color/background_dark"
            android:textColorHint="@android:color/background_dark"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_Site" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>